fixtures/cs-rng-01/bad/otp-loop-random.ts
export function generateOtp() {
	const a = Math.random();
	const b = Math.random();
	const c = Math.random();
	return `${a}${b}${c}`;
}
